// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`throwing not Error objects 1`] = `
Object {
  "rest": " FAIL  __tests__/throw-number-test.js
  ● Test suite failed to run

    Expected an Error, but \\"1\\" was thrown

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"throw-number-test.js\\".
",
}
`;

exports[`throwing not Error objects 2`] = `
Object {
  "rest": " FAIL  __tests__/throw-string-test.js
  ● Test suite failed to run

    Error
      banana

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"throw-string-test.js\\".
",
}
`;

exports[`throwing not Error objects 3`] = `
Object {
  "rest": " FAIL  __tests__/throw-object-test.js
  ● Test suite failed to run

    Error: No message was provided

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"throw-object-test.js\\".
",
}
`;

exports[`throwing not Error objects 4`] = `
Object {
  "rest": " FAIL  __tests__/assertion-count-test.js
  ● .assertions() › throws

    Error
      Error: expect(received).toBeTruthy()
      
      Expected value to be truthy, instead received
        false

  ● .assertions() › throws

    expect.assertions(2)
    
    Expected two assertions to be called but only received one assertion call.
      
      at addAssertionErrors (../../packages/jest-jasmine2/build/setup-jest-globals.js:56:21)

  ● .assertions() › throws on redeclare of assertion count

    Error
      Error: expect(received).toBeTruthy()
      
      Expected value to be truthy, instead received
        false

  ● .assertions() › throws on assertion

    expect.assertions(0)
    
    Expected zero assertions to be called but only received one assertion call.
      
      at addAssertionErrors (../../packages/jest-jasmine2/build/setup-jest-globals.js:56:21)

  .assertions()
    ✕ throws
    ✕ throws on redeclare of assertion count
    ✕ throws on assertion

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       3 failed, 3 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"assertion-count-test.js\\".
",
}
`;

exports[`works with node assert 1`] = `
Object {
  "rest": " FAIL  __tests__/node-assertion-error-test.js
  ● assert

    Error
      AssertionError: false == true

  ● assert with a message

    Error
      AssertionError: this is a message

  ● assert.ok

    Error
      AssertionError: false == true

  ● assert.ok with a message

    Error
      AssertionError: this is a message

  ● assert.equal

    Error
      expect(received).toBe(expected)
      
      Expected value to be (using ===):
        2
      Received:
        1

  ● assert.equal with a message

    Error
      expect(received).toBe(expected)
      
      Expected value to be (using ===):
        2
      Received:
        1

  ● assert.deepEqual

    Error
      expect(received).toBe(expected)
      
      Expected value to be (using ===):
        {\\"a\\": {\\"b\\": {\\"c\\": 6}}}
      Received:
        {\\"a\\": {\\"b\\": {\\"c\\": 5}}}
      
      Difference:
      
      - Expected
      + Received
      
      Object {
          \\"a\\": Object {
            \\"b\\": Object {
      -       \\"c\\": 6,
      +       \\"c\\": 5,
            },
          },
        }

  ● assert.deepEqual with a message

    Error
      expect(received).toBe(expected)
      
      Expected value to be (using ===):
        {\\"a\\": {\\"b\\": {\\"c\\": 7}}}
      Received:
        {\\"a\\": {\\"b\\": {\\"c\\": 5}}}
      
      Difference:
      
      - Expected
      + Received
      
      Object {
          \\"a\\": Object {
            \\"b\\": Object {
      -       \\"c\\": 7,
      +       \\"c\\": 5,
            },
          },
        }

  ✕ assert
  ✕ assert with a message
  ✕ assert.ok
  ✕ assert.ok with a message
  ✕ assert.equal
  ✕ assert.equal with a message
  ✕ assert.deepEqual
  ✕ assert.deepEqual with a message

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       8 failed, 8 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"node-assertion-error-test.js\\".
",
}
`;
